--- a/.github/workflows/myfirstwf.yaml
+++ b/.github/workflows/myfirstwf.yaml
@@ -18,3 +18,16 @@ jobs:
                   echo "this is my first action" >> newfile.yaml
                   cat newfile.yaml
                   pwd
+    mysecondjob:
+               needs: [myfirstjob]
+               name: My second job
+               runs-on: macos-latest
+               steps:
+               - name: Step one
+                 run: date
+    mythirdjob:
+              name: My third job
+              runs-on: windows-latest
+              steps:
+              - name: Step one
+                run: date
