fixed work dir for test github action

--- a/.github/workflows/testandbuild.yaml
+++ b/.github/workflows/testandbuild.yaml
@@ -17,6 +17,7 @@ jobs:
           with:
               node-version-file: './capstone_project/hello-world/.nvmrc'
               cache: 'npm'
+              working-directory: ./capstone_project/hello-world
         - run: npm test
     build:
           needs: [test]
