--- a/.github/workflows/testandbuild.yaml
+++ b/.github/workflows/testandbuild.yaml
@@ -16,6 +16,7 @@ jobs:
           uses: actions/setup-node@v3
           with:
               node-version-file: './capstone_project/hello-world/.nvmrc'
+        - run: cd ./capstone_project/hello-world && npm install
         - run: cd ./capstone_project/hello-world && npm test
     build:
           needs: [test]
